Rework Sign up page

--- a/pages/SignUpSignIn/RecoveryPassword/index.html
+++ b/pages/SignUpSignIn/RecoveryPassword/index.html
@@ -52,8 +52,8 @@
 				</p>
 				<div class="text-field text-field_floating">
 					<input class="text-field__input" type="email" id="emailRecovery" placeholder=" " required>
-					<label class="text-field__label" for="emailRecovery">EMAIL*</label>
-					<label class="text-field__label-error" for="emailRecovery">EMAIL ISN’T CORRECT*</label>
+					<label class="text-field__label" for="emailRecovery">E-mail*</label>
+					<label class="text-field__label-error" for="emailRecovery">Email ISn’t Correct*</label>
 				</div>
 				<button class="btn primary-btn" type="submit" onclick="nextStep()">Continue</button>
 				<div class="bottom-recovery">
@@ -104,8 +104,8 @@
 
 				<div class="text-field text-field_floating">
 					<input class="text-field__input" type="password" id="passwordNew" placeholder=" " required>
-					<label class="text-field__label" for="passwordNew">NEW PASSWORD*</label>
-					<label class="text-field__label-error" for="passwordNew">PASSWORD MUST MATCH*</label>
+					<label class="text-field__label" for="passwordNew">New Password*</label>
+					<label class="text-field__label-error" for="passwordNew">Password Must Match*</label>
 					<div class="icon-password" onclick="switchPasswordType()">
 						<span class="icon-eye-close">
 							<img src="../../../images/eye-close.svg" alt="eye close">
@@ -120,8 +120,8 @@
 				</div>
 				<div class="text-field text-field_floating">
 					<input class="text-field__input" type="password" id="passwordConfirm" placeholder=" " required>
-					<label class="text-field__label" for="passwordConfirm">CONFIRM NEW PASSWORD*</label>
-					<label class="text-field__label-error" for="passwordConfirm">PASSWORD MUST MATCH*</label>
+					<label class="text-field__label" for="passwordConfirm">Confirm New Password*</label>
+					<label class="text-field__label-error" for="passwordConfirm">Password Must Match*</label>
 					<div class="icon-password" onclick="switchPasswordType()">
 						<span class="icon-eye-close">
 							<img src="../../../images/eye-close.svg" alt="eye close">
