--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../../components/buttons/buttons.css">
     <link rel="stylesheet" href="../../components/navigation bar/navi mobile/index.css">
     <link rel="stylesheet" href="../../components/navigation bar/menuLinks.css">
-    <link rel="stylesheet" href="profile.css">
+    <link rel="stylesheet" href="admin.css">
 </head>
 <body>
     <div class="wrapper">
