--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -160,8 +160,10 @@
         <div class="background-container">
             <div class="container-content">
                 <div class="information">
-                    <h1>11:33 am</h1>
-                    <div class="date semibold-text">December 28, Wednesday</div>
+                    <div class="data-time">
+                        <h1>11:33 am</h1>
+                        <div class="date semibold-text">December 28, Wednesday</div>
+                    </div>
                     <a href="#" class="link-purple">All events</a>
                 </div>
                 <div class="events-wrapper">
