--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -86,6 +86,18 @@
                 </div>
             </div>
         </div>
+        <div class="mobile-container">
+            <div class="your-company-mobile">
+                <div class="sidebar-header">
+                    <span class="semibold-text">Your company</span>
+                </div>
+                <div class="company">
+                    <h2>Marriott International</h2>
+                    <a href="#" class="company-toggle"></a>
+                </div>
+                <a href="#" class="link-purple">Go to company page</a>
+            </div>
+        </div>
         <div class="navigation hide">
             <div class="top">
                 <div class="logo-full"></div>
@@ -172,10 +184,16 @@
                         <div class="snippet-event-container">
                             <div class="event-card active">
                                 <div class="card-top">
-                                    <div class="event-name">Global Town Hall</div>
-                                    <div class="time-counter">
-                                        <div class="live">LIVE</div>
-                                        <span>33'</span>
+                                    <div class="name-time">
+                                        <div class="event-name">Global Town Hall</div>
+                                        <div class="time-counter">
+                                            <div class="live">LIVE</div>
+                                            <span>33'</span>
+                                        </div>
+                                    </div>
+                                    <div class="duration mobile-duration">
+                                        <span class="from">11:00 am</span>
+                                        <span class="to">12:00 pm</span>
                                     </div>
                                     <a class="join-link btn-link-text">Join</a>
                                 </div>
@@ -193,6 +211,7 @@
                                         <div class="more-participants"><span>+390</span></div>
                                     </div>
                                 </div>
+                                <a class="join-link btn-link-text join-link-mobile">Join</a>
                             </div>
                         </div>
                     </div>
@@ -201,10 +220,16 @@
                         <div class="snippet-event-container">
                             <div class="event-card not-started half-snippet half-hour">
                                 <div class="card-top">
-                                    <div class="event-name">One-on-one w/ CEO</div>
-                                    <div class="time-counter">
-                                        <div class="live">LIVE</div>
-                                        <span>33'</span>
+                                    <div class="name-time">
+                                        <div class="event-name">Design thinking w/ Design department</div>
+                                        <div class="time-counter">
+                                            <div class="live">LIVE</div>
+                                            <span>33'</span>
+                                        </div>
+                                    </div>
+                                    <div class="duration mobile-duration">
+                                        <span class="from">11:00 am</span>
+                                        <span class="to">12:00 pm</span>
                                     </div>
                                     <a class="join-link btn-link-text">Join</a>
                                 </div>
@@ -218,13 +243,20 @@
                                         <div class="participant-avatar user-john"></div>
                                     </div>
                                 </div>
+                                <a class="join-link btn-link-text join-link-mobile">Join</a>
                             </div>
                             <div class="event-card not-started half-snippet two-hour">
                                 <div class="card-top">
-                                    <div class="event-name">One-on-one w/ CEO</div>
-                                    <div class="time-counter">
-                                        <div class="live">LIVE</div>
-                                        <span>33'</span>
+                                    <div class="name-time">
+                                        <div class="event-name">Design thinking w/ Design department</div>
+                                        <div class="time-counter">
+                                            <div class="live">LIVE</div>
+                                            <span>33'</span>
+                                        </div>
+                                    </div>
+                                    <div class="duration mobile-duration">
+                                        <span class="from">11:00 am</span>
+                                        <span class="to">12:00 pm</span>
                                     </div>
                                     <a class="join-link btn-link-text">Join</a>
                                 </div>
@@ -238,10 +270,11 @@
                                         <div class="participant-avatar user-john"></div>
                                     </div>
                                 </div>
+                                <a class="join-link btn-link-text join-link-mobile">Join</a>
                             </div>
                         </div>
                     </div>
-                    <div class="snippet">
+                    <div class="snippet empty">
                         <div class="snippet-time">1 PM</div>
                         <div class="snippet-event-container">
                         </div>
@@ -251,10 +284,16 @@
                         <div class="snippet-event-container">
                             <div class="event-card not-started half-snippet half-hour">
                                 <div class="card-top">
-                                    <div class="event-name">One-on-one w/ CEO</div>
-                                    <div class="time-counter">
-                                        <div class="live">LIVE</div>
-                                        <span>33'</span>
+                                    <div class="name-time">
+                                        <div class="event-name">Design thinking w/ Design department</div>
+                                        <div class="time-counter">
+                                            <div class="live">LIVE</div>
+                                            <span>33'</span>
+                                        </div>
+                                    </div>
+                                    <div class="duration mobile-duration">
+                                        <span class="from">11:00 am</span>
+                                        <span class="to">12:00 pm</span>
                                     </div>
                                     <a class="join-link btn-link-text">Join</a>
                                 </div>
@@ -271,10 +310,16 @@
                             </div>
                             <div class="event-card not-started half-snippet">
                                 <div class="card-top">
-                                    <div class="event-name">One-on-one w/ CEO</div>
-                                    <div class="time-counter">
-                                        <div class="live">LIVE</div>
-                                        <span>33'</span>
+                                    <div class="name-time">
+                                        <div class="event-name">Design thinking w/ Design department</div>
+                                        <div class="time-counter">
+                                            <div class="live">LIVE</div>
+                                            <span>33'</span>
+                                        </div>
+                                    </div>
+                                    <div class="duration mobile-duration">
+                                        <span class="from">11:00 am</span>
+                                        <span class="to">12:00 pm</span>
                                     </div>
                                     <a class="join-link btn-link-text">Join</a>
                                 </div>
