--- a/pages/Company/Invitation/index.html
+++ b/pages/Company/Invitation/index.html
@@ -84,6 +84,9 @@
 		<mask id="mask0_635_14377" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="7" width="12" height="6">
 			<path d="M5.6247 7.21913C5.19343 6.87412 4.56414 6.94404 4.21913 7.3753C3.87412 7.80657 3.94404 8.43586 4.3753 8.78087L5.6247 7.21913ZM10 12L9.3753 12.7809C9.74052 13.073 10.2595 13.073 10.6247 12.7809L10 12ZM15.6247 8.78087C16.056 8.43586 16.1259 7.80657 15.7809 7.3753C15.4359 6.94404 14.8066 6.87412 14.3753 7.21913L15.6247 8.78087ZM4.3753 8.78087L9.3753 12.7809L10.6247 11.2191L5.6247 7.21913L4.3753 8.78087ZM10.6247 12.7809L15.6247 8.78087L14.3753 7.21913L9.3753 11.2191L10.6247 12.7809Z" fill="#140E17"/>
 		</mask>
+		<mask id="mask0_715_22326" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="2" width="17" height="20">
+			<path d="M6.19961 9.1199C6.77951 9.1199 7.24961 9.59 7.24961 10.1699V19.6799H17.7496V10.1699C17.7496 9.59001 18.2197 9.1199 18.7996 9.1199C19.3795 9.1199 19.8496 9.59 19.8496 10.1699V20.6399C19.8496 21.1701 19.3795 21.5999 18.7996 21.5999H6.19961C5.61971 21.5999 5.14961 21.1701 5.14961 20.6399V10.1699C5.14961 9.59001 5.61971 9.1199 6.19961 9.1199ZM10.3996 9.1199C10.9795 9.1199 11.4496 9.59 11.4496 10.1699V16.7099C11.4496 17.2898 10.9795 17.7599 10.3996 17.7599C9.81971 17.7599 9.34961 17.2898 9.34961 16.7099V10.1699C9.34961 9.59 9.81971 9.1199 10.3996 9.1199ZM14.5996 9.1199C15.1795 9.1199 15.6496 9.59 15.6496 10.1699V16.7099C15.6496 17.2898 15.1795 17.7599 14.5996 17.7599C14.0197 17.7599 13.5496 17.2898 13.5496 16.7099V10.1699C13.5496 9.59 14.0197 9.1199 14.5996 9.1199ZM15.6496 2.3999C16.1016 2.3999 16.5028 2.66432 16.6457 3.05632L17.4556 5.27894L19.9397 5.27964C20.4699 5.27978 20.8996 5.70961 20.8996 6.23977C20.8996 6.77004 20.4697 7.1999 19.9395 7.1999H5.05974C4.52948 7.1999 4.09961 6.77004 4.09961 6.23977C4.09961 5.70961 4.52931 5.27978 5.05948 5.27964L7.54256 5.27894L8.35349 3.05632C8.49641 2.66432 8.89766 2.3999 9.34961 2.3999H15.6496ZM14.8928 4.3199H10.1064L9.75596 5.27894H15.2422L14.8928 4.3199Z" fill="#140E17"/>
+		</mask>
 	</svg>
 	<main>
 		<div class="navigation hide">
@@ -187,6 +190,17 @@
 						<span class="regular-text">Invitation to artem.pchelyakov@marriottinternation l.com has been revoked</span>
 					</div>
 				</div>
+
+				<div class="alert success removed-alert">
+					<svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<g mask="url(#mask0_715_22326)">
+							<rect x="0.5" width="24" height="24" fill="#51B267"/>
+						</g>
+					</svg>
+					<div class="container">
+						<span class="regular-text">Artem Pchelyakov was removed from the company</span>
+					</div>
+				</div>
 				<div class="content-header">
 					<h1 class="header-title">
 						Marriott International
@@ -202,13 +216,13 @@
 				</div>
 				<div class="members-container">
 					<div class="members-navigation">
-						<button class="members-tab">
+						<button class="members-tab" onclick="switchTable()">
 							Accepted invitation
 							<span class="tab-counter">
 								0
 							</span>
 						</button>
-						<button class="members-tab active">
+						<button class="members-tab active" onclick="switchTable()">
 							Sented invitations
 							<span class="tab-counter">
 								5
@@ -230,34 +244,71 @@
 							Invite member
 						</button>
 					</div>
-					<div class="table-custom">
+					<div class="table-custom sented-invitation isActive">
 						<div class="table-head">
 							<div class="table-cell">
-								EMAIL
-								<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g mask="url(#mask0_635_14361)">
-										<rect width="20" height="20" fill="#A2A2A2"/>
-									</g>
-								</svg>
+								<div class="select filter">
+									<div class="select__header">
+										<span class="select__current small-semibold-text">
+											EMAIL
+										</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_635_14361)">
+												<rect width="20" height="20" fill="#A2A2A2"/>
+											</g>
+										</svg>
+									</div>
+									<div class="select__body">
+										<div class="select__item">Ascending (A to Z)</div>
+										<div class="select__item">Descending (Z to A)</div>
+										<span class="select-border"></span>
+										<div class="select__clear-btn">Clear</div>
+									</div>
+								</div>
 							</div>
 							<div class="table-cell">
-								RIGHTS
-								<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<mask id="mask0_635_14371" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="16" height="17">
-										<path d="M3.53846 3C3.24108 3 3 3.24143 3 3.53925C3 6.04858 4.42622 8.22431 6.51114 9.2978C7.33864 9.72387 8 10.5031 8 11.4338V15.9967C8 16.826 8.94896 17.296 9.60704 16.7925L11.607 15.2625C11.8547 15.0731 12 14.7788 12 14.4667V11.4338C12 10.503 12.6614 9.72387 13.4889 9.2978C15.5738 8.22431 17 6.04858 17 3.53925C17 3.24143 16.7589 3 16.4615 3H3.53846Z" stroke="black" stroke-width="2"/>
-									</mask>
-									<g mask="url(#mask0_635_14371)">
-										<rect width="20" height="20" fill="#A2A2A2"/>
-									</g>
-								</svg>
+								<div class="select filter">
+									<div class="select__header">
+										<span class="select__current small-semibold-text">
+											RIGHTS
+										</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<mask id="mask0_635_14371" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="16" height="17">
+												<path d="M3.53846 3C3.24108 3 3 3.24143 3 3.53925C3 6.04858 4.42622 8.22431 6.51114 9.2978C7.33864 9.72387 8 10.5031 8 11.4338V15.9967C8 16.826 8.94896 17.296 9.60704 16.7925L11.607 15.2625C11.8547 15.0731 12 14.7788 12 14.4667V11.4338C12 10.503 12.6614 9.72387 13.4889 9.2978C15.5738 8.22431 17 6.04858 17 3.53925C17 3.24143 16.7589 3 16.4615 3H3.53846Z" stroke="black" stroke-width="2"/>
+											</mask>
+											<g mask="url(#mask0_635_14371)">
+												<rect width="20" height="20" fill="#A2A2A2"/>
+											</g>
+										</svg>
+									</div>
+									<div class="select__body">
+										<div class="select__item">User</div>
+										<div class="select__item">Admin</div>
+										<div class="select__item">Main Admin</div>
+										<span class="select-border"></span>
+										<div class="select__clear-btn">Clear</div>
+									</div>
+								</div>
 							</div>
 							<div class="table-cell">
-								DATE
-								<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g mask="url(#mask0_635_14377)">
-										<rect width="20" height="20" fill="#A2A2A2"/>
-									</g>
-								</svg>
+								<div class="select filter">
+									<div class="select__header">
+										<span class="select__current small-semibold-text">
+											DATE
+										</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_635_14377)">
+												<rect width="20" height="20" fill="#A2A2A2"/>
+											</g>
+										</svg>
+									</div>
+									<div class="select__body">
+										<div class="select__item">Old to new</div>
+										<div class="select__item">New to old</div>
+										<span class="select-border"></span>
+										<div class="select__clear-btn">Clear</div>
+									</div>
+								</div>
 							</div>
 						</div>
 						<div class="table-body">
@@ -431,6 +482,122 @@
 							</div>
 						</div>
 					</div>
+					<div class="table-custom accept-invitation">
+						<div class="table-head">
+							<div class="table-cell">
+								<div class="select filter">
+									<div class="select__header">
+										<span class="select__current small-semibold-text">
+											NAME
+										</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_635_14377)">
+												<rect width="20" height="20" fill="#A2A2A2"/>
+											</g>
+										</svg>
+									</div>
+									<div class="select__body">
+										<div class="select__item">Ascending (A to Z)</div>
+										<div class="select__item">Descending (Z to A)</div>
+										<span class="select-border"></span>
+										<div class="select__clear-btn">Clear</div>
+									</div>
+								</div>
+							</div>
+							<div class="table-cell">
+								<div class="select filter">
+									<div class="select__header">
+										<span class="select__current small-semibold-text">
+											EMAIL
+										</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_635_14361)">
+												<rect width="20" height="20" fill="#A2A2A2"/>
+											</g>
+										</svg>
+									</div>
+									<div class="select__body">
+										<div class="select__item">Ascending (A to Z)</div>
+										<div class="select__item">Descending (Z to A)</div>
+										<span class="select-border"></span>
+										<div class="select__clear-btn">Clear</div>
+									</div>
+								</div>
+							</div>
+							<div class="table-cell">
+								<div class="select filter">
+									<div class="select__header">
+										<span class="select__current small-semibold-text">
+											RIGHTS
+										</span>
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<mask id="mask0_635_143711" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="16" height="17">
+												<path d="M3.53846 3C3.24108 3 3 3.24143 3 3.53925C3 6.04858 4.42622 8.22431 6.51114 9.2978C7.33864 9.72387 8 10.5031 8 11.4338V15.9967C8 16.826 8.94896 17.296 9.60704 16.7925L11.607 15.2625C11.8547 15.0731 12 14.7788 12 14.4667V11.4338C12 10.503 12.6614 9.72387 13.4889 9.2978C15.5738 8.22431 17 6.04858 17 3.53925C17 3.24143 16.7589 3 16.4615 3H3.53846Z" stroke="black" stroke-width="2"/>
+											</mask>
+											<g mask="url(#mask0_635_143711)">
+												<rect width="20" height="20" fill="#A2A2A2"/>
+											</g>
+										</svg>
+									</div>
+									<div class="select__body">
+										<div class="select__item">User</div>
+										<div class="select__item">Admin</div>
+										<div class="select__item">Main Admin</div>
+										<span class="select-border"></span>
+										<div class="select__clear-btn">Clear</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="table-body">
+							<div class="table-row">
+								<div class="table-cell cell-for-name">
+									<div class="wrap-name">
+										<div class="avatar john mini"></div>
+										Alex Thompson
+									</div>
+								</div>
+								<div class="table-cell cell-for-email">
+									<span class="cell-header">
+										EMAIL
+									</span>
+									alexthompson@marriottinternational.com
+								</div>
+								<div class="table-cell cell-for-rights">
+									<span class="cell-header">
+										RIGHTS
+									</span>
+									<div class="select badge">
+										<div class="select__header">
+											<div class="indicator color-main-admin"></div>
+											<span class="select__current small-semibold-text">Main Admin</span>
+											<span class="arrow-icon">
+												<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+												<g mask="url(#mask0_553_20590)">
+												<rect width="20" height="20"/>
+												</g>
+												</svg>
+											</span>
+										</div>
+										<div class="select__body">
+											<div class="select__item">User</div>
+											<div class="select__item">Admin</div>
+											<div class="select__item">Main Admin</div>
+										</div>
+									</div>
+								</div>
+								<div class="table-cell cell-delete-btn">
+									<button class="btn-delete" onclick="showRemovedAlert()">
+										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<g mask="url(#mask0_553_12885)">
+												<rect width="20" height="20" fill="#E22929"/>
+											</g>
+										</svg>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -548,6 +715,20 @@
         const showAlert = () => {
             const alert = document.querySelector('.invitation-alert')
 	        alert.classList.toggle('shown')
+        }
+
+        const showRemovedAlert = () => {
+            const alert = document.querySelector('.removed-alert')
+            alert.classList.toggle('shown')
+        }
+
+        const switchTable = () => {
+            const tabs = document.querySelectorAll('.members-tab')
+	        const tables = document.querySelectorAll('.table-custom')
+	        tabs[0].classList.toggle('active')
+            tabs[1].classList.toggle('active')
+	        tables[0].classList.toggle('isActive')
+            tables[1].classList.toggle('isActive')
         }
 
         window.addEventListener('resize', function() {
