--- a/pages/Company/index.html
+++ b/pages/Company/index.html
@@ -369,6 +369,35 @@
 								<div class="select__item">Admin</div>
 							</div>
 						</div>
+						<button class="btn-delete">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_553_12885)">
+									<rect width="20" height="20" fill="#E22929"/>
+								</g>
+							</svg>
+						</button>
+					</div>
+					<div class="email-item">
+						<div class="text-field text-field_floating">
+							<input class="text-field__input" type="email" id="item2" placeholder=" " required>
+							<label class="text-field__label" for="item2">User email</label>
+						</div>
+						<div class="select">
+							<div class="select__header">
+								<span class="select__current"> Admin</span>
+								<span class="arrow-icon">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
+							<g mask="url(#mask0_553_20590)">
+							<rect width="20" height="20"/>
+							</g>
+							</svg>
+						</span>
+							</div>
+							<div class="select__body">
+								<div class="select__item">User</div>
+								<div class="select__item">Admin</div>
+							</div>
+						</div>
 						<button>
 							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<g mask="url(#mask0_553_12885)">
@@ -377,35 +406,6 @@
 							</svg>
 						</button>
 					</div>
-<!--					<div class="email-item">-->
-<!--						<div class="text-field text-field_floating">-->
-<!--							<input class="text-field__input" type="email" id="item2" placeholder=" " required>-->
-<!--							<label class="text-field__label" for="item2">User email</label>-->
-<!--						</div>-->
-<!--						<div class="select">-->
-<!--							<div class="select__header">-->
-<!--								<span class="select__current"> Admin</span>-->
-<!--								<span class="arrow-icon">-->
-<!--							<svg width="20" height="20" viewBox="0 0 20 20" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">-->
-<!--							<g mask="url(#mask0_553_20590)">-->
-<!--							<rect width="20" height="20"/>-->
-<!--							</g>-->
-<!--							</svg>-->
-<!--						</span>-->
-<!--							</div>-->
-<!--							<div class="select__body">-->
-<!--								<div class="select__item">User</div>-->
-<!--								<div class="select__item">Admin</div>-->
-<!--							</div>-->
-<!--						</div>-->
-<!--						<button>-->
-<!--							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--								<g mask="url(#mask0_553_12885)">-->
-<!--									<rect width="20" height="20" fill="#E22929"/>-->
-<!--								</g>-->
-<!--							</svg>-->
-<!--						</button>-->
-<!--					</div>-->
 					<button class="btn tetriary-btn add-email">
 						<svg width="41" height="40" viewBox="0 0 41 40" fill="#A24DE8" xmlns="http://www.w3.org/2000/svg">
 							<g mask="url(#mask0_373_6552)">
