--- a/pages/HomePage/index.html
+++ b/pages/HomePage/index.html
@@ -92,61 +92,63 @@
 			<div class="line"></div>
 		</div>
 		<div class="container-content">
-			<div class="welcome-wrapper">
-				<div class="header">
-					Welcome,
-					<div class="avatar john mini"></div>
-					<span class="user-name">
-						Constantine Papadopoulos
-					</span>
-					.
-				</div>
-				<div class="body">
-					<span>This is your personal account.</span>
-					<span>Here you can <a href="#" class="link">attend events</a> or <a class="link link-create-events" href="#">create them</a>.</span>
-					<span>Do you have a question? Let’s <a href="#" class="link">find an answer.</a></span>
-				</div>
-				<button class="welcome-btn">
-					Show more
-					<svg width="24" height="24" viewBox="0 0 24 24" fill="#A1A1A1" xmlns="http://www.w3.org/2000/svg">
-						<mask id="mask0_79_511" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="8" width="14" height="8">
-							<path d="M6.64018 8.73178C6.21591 8.37821 5.58534 8.43554 5.23178 8.85982C4.87821 9.28409 4.93554 9.91466 5.35982 10.2682L6.64018 8.73178ZM12 14.5L11.3598 15.2682C11.7307 15.5773 12.2693 15.5773 12.6402 15.2682L12 14.5ZM18.6402 10.2682C19.0645 9.91466 19.1218 9.28409 18.7682 8.85982C18.4147 8.43554 17.7841 8.37821 17.3598 8.73178L18.6402 10.2682ZM5.35982 10.2682L11.3598 15.2682L12.6402 13.7318L6.64018 8.73178L5.35982 10.2682ZM12.6402 15.2682L18.6402 10.2682L17.3598 8.73178L11.3598 13.7318L12.6402 15.2682Z"/>
-						</mask>
-						<g mask="url(#mask0_79_511)">
-							<rect width="24" height="24"/>
-						</g>
-					</svg>
-				</button>
-			</div>
-			<div class="events-wrap">
-				<h4>NEXT EVENT</h4>
-
-				<div class="event-container">
-					<div class="image-container"></div>
-					<div class="length-time">
-						<h4>LIVE</h4>
-						<span>1h 32m</span>
-					</div>
-					<div class="event-card">
-						<div class="time">
-							<div class="container">
-								<span class="regular-text gray-600">00:00 pm</span>
-							</div>
-							<svg width="12" height="8" viewBox="0 0 12 8" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
-								<path d="M0.24 4.624V3.28H9.56L7.256 0.976L8.072 0.144L11.888 3.96L8.072 7.776L7.256 6.944L9.576 4.624H0.24Z"/>
-							</svg>
-							<div class="container">
-								<span class="regular-text gray-600">00:00 am</span>
-							</div>
+			<div class="home-page-content">
+				<div class="welcome-wrapper isActive">
+					<div class="welcome-container">
+						<div class="header">
+							Welcome,
+							<div class="avatar john mini"></div>
+							<h3 class="user-name">
+								Constantine Papadopoulos
+							</h3>
 						</div>
-						<h2>Global Town Hall</h2>
-						<p class="description">
-							The purpose of the Global Town Hall is to provide an independent platform to discuss the state of the world still grappling with the COVID-19 crisis, evaluate policy challenges and lessons learned, and gather ideas for future...
-						</p>
-						<button class="btn primary-btn">Create company</button>
-						<div class="badge s-size">
-							<div class="indicator color-admin"></div>
-							<span class="small-semibold-text">Admin</span>
+						<div class="body">
+							<span>This is your personal account.</span>
+							<span>Here you can <a href="#" class="link">attend events</a> or <a class="link link-create-events" href="#">create them</a>.</span>
+							<span>Do you have a question? Let’s <a href="#" class="link">find an answer</a>.</span>
+						</div>
+						<button class="welcome-btn" onclick="mainDropdown(event)">
+							Show more
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="#A1A1A1" xmlns="http://www.w3.org/2000/svg">
+								<mask id="mask0_79_511" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="5" y="8" width="14" height="8">
+									<path d="M6.64018 8.73178C6.21591 8.37821 5.58534 8.43554 5.23178 8.85982C4.87821 9.28409 4.93554 9.91466 5.35982 10.2682L6.64018 8.73178ZM12 14.5L11.3598 15.2682C11.7307 15.5773 12.2693 15.5773 12.6402 15.2682L12 14.5ZM18.6402 10.2682C19.0645 9.91466 19.1218 9.28409 18.7682 8.85982C18.4147 8.43554 17.7841 8.37821 17.3598 8.73178L18.6402 10.2682ZM5.35982 10.2682L11.3598 15.2682L12.6402 13.7318L6.64018 8.73178L5.35982 10.2682ZM12.6402 15.2682L18.6402 10.2682L17.3598 8.73178L11.3598 13.7318L12.6402 15.2682Z"/>
+								</mask>
+								<g mask="url(#mask0_79_511)">
+									<rect width="24" height="24"/>
+								</g>
+							</svg>
+						</button>
+					</div>
+				</div>
+				<div class="events-wrap">
+					<h4>Next event</h4>
+					<div class="event-container">
+						<div class="image-container"></div>
+						<div class="length-time">
+							<h5>LIVE</h5>
+							<span>1h 32m</span>
+						</div>
+						<div class="event-card">
+							<div class="time">
+								<div class="container">
+									<span class="regular-text">11:00 pm</span>
+								</div>
+								<svg width="12" height="8" viewBox="0 0 12 8" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
+									<path d="M0.24 4.624V3.28H9.56L7.256 0.976L8.072 0.144L11.888 3.96L8.072 7.776L7.256 6.944L9.576 4.624H0.24Z"/>
+								</svg>
+								<div class="container">
+									<span class="regular-text">13:00 pm</span>
+								</div>
+							</div>
+							<h4>Global Town Hall</h4>
+							<p class="description">
+								The purpose of the Global Town Hall is to provide an independent platform to discuss the state of the world still grappling with the COVID-19 crisis, evaluate policy challenges and lessons learned, and gather ideas for future...
+							</p>
+							<div class="badge">
+								<div class="indicator color-admin"></div>
+								<span>Marriott International</span>
+							</div>
+							<button class="btn primary-btn">Join</button>
 						</div>
 					</div>
 				</div>
@@ -241,5 +243,11 @@
 		</aside>
 	</main>
 <script src="../../js/show-menu.js"></script>
+	<script>
+		const mainDropdown = (e) => {
+            const dropdown = document.querySelector('.welcome-wrapper')
+			dropdown.classList.toggle('isActive')
+		}
+	</script>
 </body>
 </html>
