--- a/pages/HomePage/Admin/index.html
+++ b/pages/HomePage/Admin/index.html
@@ -5,16 +5,17 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="../../css/globalStyles.css">
-	<link rel="stylesheet" href="../../components/logos/index.css">
-	<link rel="stylesheet" href="../../components/avatar/index.css">
-	<link rel="stylesheet" href="../../components/date&time/index.css">
-	<link rel="stylesheet" href="../../components/links/index.css">
-	<link rel="stylesheet" href="../../components/badges/index.css">
-	<link rel="stylesheet" href="../../components/buttons/buttons.css">
-	<link rel="stylesheet" href="../../components/dropdown/index.css">
-	<link rel="stylesheet" href="../../components/navigation%20bar/menuLinks.css">
-	<link rel="stylesheet" href="../../components/select/index.css">
+	<link rel="stylesheet" href="../../../css/globalStyles.css">
+	<link rel="stylesheet" href="../../../components/logos/index.css">
+	<link rel="stylesheet" href="../../../components/avatar/index.css">
+	<link rel="stylesheet" href="../../../components/date&time/index.css">
+	<link rel="stylesheet" href="../../../components/links/index.css">
+	<link rel="stylesheet" href="../../../components/badges/index.css">
+	<link rel="stylesheet" href="../../../components/buttons/buttons.css">
+	<link rel="stylesheet" href="../../../components/dropdown/index.css">
+	<link rel="stylesheet" href="../../../components/navigation%20bar/menuLinks.css">
+	<link rel="stylesheet" href="../../../components/select/index.css">
+	<link rel="stylesheet" href="../index.css">
 	<link rel="stylesheet" href="./index.css">
 	<title>Home Page</title>
 </head>
@@ -29,6 +30,13 @@
 		      fill="#140E17"/>
 		<path d="M4 21C4 20.4477 4.44772 20 5 20H27C27.5523 20 28 20.4477 28 21C28 21.5523 27.5523 22 27 22H5C4.44772 22 4 21.5523 4 21Z"
 		      fill="#140E17"/>
+	</mask>
+	<mask id="mask0_373_6552" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="4" width="33" height="32">
+		<path fill-rule="evenodd" clip-rule="evenodd" d="M19.5 35C19.5 35.5523 19.9477 36 20.5 36C21.0523 36 21.5 35.5523 21.5 35V21H35.5C36.0523 21 36.5 20.5523 36.5 20C36.5 19.4477 36.0523 19 35.5 19H21.5V5C21.5 4.44772 21.0523 4 20.5 4C19.9477 4 19.5 4.44772 19.5 5V19H5.5C4.94772 19 4.5 19.4477 4.5 20C4.5 20.5523 4.94772 21 5.5 21H19.5V35Z" fill="#140E17"/>
+	</mask>
+	<mask id="mask0_492_8564" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="3" y="2" width="14" height="16">
+		<path fill-rule="evenodd" clip-rule="evenodd" d="M9.99827 2C7.65918 2 5.76298 3.89621 5.76298 6.23529C5.76298 8.57438 7.65918 10.4706 9.99827 10.4706C12.3374 10.4706 14.2336 8.57438 14.2336 6.23529C14.2336 3.89621 12.3374 2 9.99827 2ZM7.64533 6.23529C7.64533 4.9358 8.69878 3.88235 9.99827 3.88235C11.2978 3.88235 12.3512 4.9358 12.3512 6.23529C12.3512 7.53479 11.2978 8.58824 9.99827 8.58824C8.69878 8.58824 7.64533 7.53479 7.64533 6.23529Z" fill="#140E17"/>
+		<path d="M9.99834 11.4118C6.24609 11.4118 3.8938 14.1303 3.47678 17.0619C3.40357 17.5765 3.83141 18 4.35121 18C4.87101 18 5.28342 17.5748 5.38255 17.0645C5.7753 15.0428 7.43304 13.2941 9.99834 13.2941C12.5636 13.2941 14.2213 15.0428 14.614 17.0645C14.7131 17.5748 15.1255 18 15.6453 18C16.1651 18 16.593 17.5765 16.5198 17.0619C16.1028 14.1303 13.7506 11.4118 9.99834 11.4118Z" fill="#140E17"/>
 	</mask>
 </svg>
 <main>
@@ -130,28 +138,141 @@
 		</button>
 		<div class="line"></div>
 	</div>
-	<div class="container-content">
-
-<!--		add class='empty' if not event-->
+	<div class="container-content admin-content">
 		<div class="home-page-content">
-			<div class="welcome-wrapper isActive">
+
+<!--			If no live event add class = 'noLiveEvent'-->
+			<div class="welcome-wrapper admin-dropdown isActive">
 				<div class="welcome-container">
 					<div class="header">
-						Welcome,
-						<div class="user-info">
-							<div class="avatar john mini"></div>
-							<h3 class="user-name">
-								Constantine Papadopoulos
-							</h3>
+						<div class="date-container">
+							<span class="date-time">
+								10:32 am
+							</span>
+							<span class="date-bottom">
+								December 28, Wednesday
+							</span>
+						</div>
+						<div class="dropdown-btn-wrap">
+							<button class="btn secondary-btn">
+								<svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<g mask="url(#mask0_373_6552)">
+										<rect x="0.5" width="40" height="40" fill="#A24DE8"/>
+									</g>
+								</svg>
+								<span class="btn-title">
+									Add an event
+								</span>
+							</button>
+							<button class="btn primary-btn" onclick="mainDropdown(event)">
+								All events
+							</button>
 						</div>
 					</div>
 					<div class="body">
-						<span>This is your personal account.</span>
-						<span>Here you can <a href="#" class="link">attend events</a> or <a
-								class="link link-create-events" href="#">create them</a>.</span>
-						<span>Do you have a question?<span class="span-with-link">Let’s<a href="#" class="link">find an answer</a>.</span></span>
 					</div>
-					<button class="welcome-btn" onclick="mainDropdown(event)">
+				</div>
+			</div>
+			<div class="side-menu-mobile">
+				<div class="counter-wrap">
+					<div class="card">
+						<h5>
+							Today
+							<span class="date">
+							jan 16, friday
+						</span>
+						</h5>
+						<div class="upcoming-counter">
+							<span class="count">
+								3
+							</span>
+							<swan class="description">
+								Upcoming
+								events
+							</swan>
+						</div>
+						<div class="done-counter">
+							<span class="count">
+								19
+							</span>
+							<swan class="description">
+								Events is done
+							</swan>
+						</div>
+					</div>
+					<div class="card">
+						<h5>
+							Tomorrow
+							<span class="date">
+								jan 17, saturday
+							</span>
+						</h5>
+						<div class="upcoming-counter">
+							<span class="count">
+								54
+							</span>
+							<span class="description">
+								Upcoming
+								events
+							</span>
+						</div>
+					</div>
+				</div>
+				<div class="mobile-sideMenu-dropdown isOpen">
+					<div class="dropdown-body">
+						<div class="invitation-wrap">
+							<div class="select selected">
+								<div class="select__header">
+							<span class="select-label">
+								YOUR COMPANY
+							</span>
+									<span class="select__current">Marriott International</span>
+									<span class="arrow-icon">
+								<svg width="20" height="20" viewBox="0 0 20 20" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_553_20590)">
+								<rect width="20" height="20"/>
+								</g>
+								</svg>
+							</span>
+								</div>
+								<div class="select__body">
+									<div class="select__item">Item</div>
+									<div class="select__item">Item</div>
+									<div class="select__item">Item</div>
+									<div class="select__item">Item</div>
+								</div>
+							</div>
+							<div class="invitation-sent invitation-counter">
+								<h5>
+									INVITATION SENT
+								</h5>
+								<span class="count">
+							1337
+							</span>
+								<div>
+									<a href="#" class="link">Invite more</a>
+								</div>
+							</div>
+							<div class="invitation-accept invitation-counter">
+								<h5>
+									INVITATION ACCEPT
+								</h5>
+								<span class="count">
+							399
+							</span>
+								<div class="members">
+									<div class="avatar john mini"></div>
+									<div class="avatar john mini"></div>
+									<div class="avatar john mini"></div>
+									<div class="avatar john mini"></div>
+									<div class="avatar mini">
+										<span>+390</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="dropdown-header" onclick="openDropdown()">
 						Show more
 						<svg width="24" height="24" viewBox="0 0 24 24" fill="#A1A1A1"
 						     xmlns="http://www.w3.org/2000/svg">
@@ -163,62 +284,11 @@
 								<rect width="24" height="24"/>
 							</g>
 						</svg>
-					</button>
-				</div>
-				<div class="side-menu-mobile">
-					<div class="counter-wrap">
-						<div class="card">
-							<h5>
-								Today
-								<span class="date">
-							jan 16, friday
-						</span>
-							</h5>
-							<div class="upcoming-counter">
-							<span class="count">
-								3
-							</span>
-								<swan class="description">
-									Upcoming
-									events
-								</swan>
-							</div>
-							<div class="done-counter">
-							<span class="count">
-								19
-							</span>
-								<swan class="description">
-									Events is done
-								</swan>
-							</div>
-						</div>
-						<div class="card">
-							<h5>
-								Tomorrow
-								<span class="date">
-									jan 17, saturday
-								</span>
-							</h5>
-							<div class="upcoming-counter">
-								<span class="count">
-									54
-								</span>
-								<span class="description">
-									Upcoming
-									events
-								</span>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
-
-			<!--Empty container-->
-<!--			<div class="empty-title">-->
-<!--				You have no events today-->
-<!--			</div>-->
 			<div class="events-wrap live-events">
-				<h4>Next event</h4>
+				<h4>Live event</h4>
 				<div class="event-container">
 					<div class="image-container"></div>
 					<div class="length-time">
@@ -252,6 +322,116 @@
 					</div>
 				</div>
 			</div>
+
+<!--			Upcoming-events-->
+
+			<div class="upcoming-event-wrap">
+				<h4>Upcoming events</h4>
+				<div class="upcoming-event-container">
+					<div class="event-card">
+						<div class="time">
+							<div class="container">
+								<span>11:00 am</span>
+							</div>
+							<svg width="12" height="8" viewBox="0 0 12 8" fill="#140E17"
+							     xmlns="http://www.w3.org/2000/svg">
+								<path d="M0.24 4.624V3.28H9.56L7.256 0.976L8.072 0.144L11.888 3.96L8.072 7.776L7.256 6.944L9.576 4.624H0.24Z"/>
+							</svg>
+							<div class="container">
+								<span>13:00 pm</span>
+							</div>
+						</div>
+						<h5 class="card-title">
+							New products presentation
+						</h5>
+						<div class="badge">
+							<div class="indicator color-admin"></div>
+							<span>Samsung</span>
+						</div>
+						<div class="card-counter">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_492_8564)">
+									<rect width="20" height="20" fill="#140E17"/>
+								</g>
+							</svg>
+							<span class="count">
+								129
+							</span>
+						</div>
+						<div class="card-image">
+							<img src="../images/Samsung.jpg" alt="photo event">
+						</div>
+					</div>
+					<div class="event-card">
+						<div class="time">
+							<div class="container">
+								<span>11:00 am</span>
+							</div>
+							<svg width="12" height="8" viewBox="0 0 12 8" fill="#140E17"
+							     xmlns="http://www.w3.org/2000/svg">
+								<path d="M0.24 4.624V3.28H9.56L7.256 0.976L8.072 0.144L11.888 3.96L8.072 7.776L7.256 6.944L9.576 4.624H0.24Z"/>
+							</svg>
+							<div class="container">
+								<span>13:00 pm</span>
+							</div>
+						</div>
+						<h5 class="card-title">
+							New products presentation
+						</h5>
+						<div class="badge">
+							<div class="indicator color-admin"></div>
+							<span>Samsung</span>
+						</div>
+						<div class="card-counter">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_492_8564)">
+									<rect width="20" height="20" fill="#140E17"/>
+								</g>
+							</svg>
+							<span class="count">
+								129
+							</span>
+						</div>
+						<div class="card-image">
+							<img src="../images/Samsung.jpg" alt="photo event">
+						</div>
+					</div>
+					<div class="event-card">
+						<div class="time">
+							<div class="container">
+								<span>11:00 am</span>
+							</div>
+							<svg width="12" height="8" viewBox="0 0 12 8" fill="#140E17"
+							     xmlns="http://www.w3.org/2000/svg">
+								<path d="M0.24 4.624V3.28H9.56L7.256 0.976L8.072 0.144L11.888 3.96L8.072 7.776L7.256 6.944L9.576 4.624H0.24Z"/>
+							</svg>
+							<div class="container">
+								<span>13:00 pm</span>
+							</div>
+						</div>
+						<h5 class="card-title">
+							New products presentation
+						</h5>
+						<div class="badge">
+							<div class="indicator color-admin"></div>
+							<span>Samsung</span>
+						</div>
+						<div class="card-counter">
+							<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_492_8564)">
+									<rect width="20" height="20" fill="#140E17"/>
+								</g>
+							</svg>
+							<span class="count">
+								129
+							</span>
+						</div>
+						<div class="card-image">
+							<img src="../images/Samsung.jpg" alt="photo event">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -278,7 +458,7 @@
 					</div>
 					<div class="done-counter">
 							<span class="count">
-								19
+								1
 							</span>
 						<swan class="description">
 							Events is done
@@ -294,7 +474,7 @@
 					</h5>
 					<div class="upcoming-counter">
 					<span class="count">
-						54
+						4
 					</span>
 						<swan class="description">
 							Upcoming
@@ -303,66 +483,74 @@
 					</div>
 				</div>
 			</div>
-			<!--				<div class="invitation-wrap">-->
-			<!--					<div class="select selected">-->
-			<!--						<div class="select__header">-->
-			<!--							<span class="select-label">-->
-			<!--								YOUR COMPANY-->
-			<!--							</span>-->
-			<!--							<span class="select__current">Marriott International</span>-->
-			<!--							<span class="arrow-icon">-->
-			<!--								<svg width="20" height="20" viewBox="0 0 20 20" fill="#140E17" xmlns="http://www.w3.org/2000/svg">-->
-			<!--								<g mask="url(#mask0_553_20590)">-->
-			<!--								<rect width="20" height="20"/>-->
-			<!--								</g>-->
-			<!--								</svg>-->
-			<!--							</span>-->
-			<!--						</div>-->
-			<!--						<div class="select__body">-->
-			<!--							<div class="select__item">Item</div>-->
-			<!--							<div class="select__item">Item</div>-->
-			<!--							<div class="select__item">Item</div>-->
-			<!--							<div class="select__item">Item</div>-->
-			<!--						</div>-->
-			<!--					</div>-->
-			<!--					<div class="invitation-sent invitation-counter">-->
-			<!--						<h5>-->
-			<!--							INVITATION SENT-->
-			<!--						</h5>-->
-			<!--						<span class="count">-->
-			<!--							1337-->
-			<!--							</span>-->
-			<!--						<div>-->
-			<!--							<a href="#" class="link">Invite more</a>-->
-			<!--						</div>-->
-			<!--					</div>-->
-			<!--					<div class="invitation-accept invitation-counter">-->
-			<!--						<h5>-->
-			<!--							INVITATION ACCEPT-->
-			<!--						</h5>-->
-			<!--						<span class="count">-->
-			<!--							399-->
-			<!--							</span>-->
-			<!--						<div class="members">-->
-			<!--							<div class="avatar john mini"></div>-->
-			<!--							<div class="avatar john mini"></div>-->
-			<!--							<div class="avatar john mini"></div>-->
-			<!--							<div class="avatar john mini"></div>-->
-			<!--							<div class="avatar mini">-->
-			<!--								<span>+390</span>-->
-			<!--							</div>-->
-			<!--						</div>-->
-			<!--					</div>-->
-			<!--				</div>-->
+				<div class="invitation-wrap">
+
+<!--					If need disabled select = class='disabled'-->
+					<div class="select selected">
+						<div class="select__header">
+							<span class="select-label">
+								YOUR COMPANY
+							</span>
+							<span class="select__current">Marriott International</span>
+							<span class="arrow-icon">
+								<svg width="20" height="20" viewBox="0 0 20 20" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_553_20590)">
+								<rect width="20" height="20"/>
+								</g>
+								</svg>
+							</span>
+						</div>
+						<div class="select__body">
+							<div class="select__item">Item</div>
+							<div class="select__item">Item</div>
+							<div class="select__item">Item</div>
+							<div class="select__item">Item</div>
+						</div>
+					</div>
+					<div class="invitation-sent invitation-counter">
+						<h5>
+							INVITATION SENT
+						</h5>
+						<span class="count">
+							1337
+							</span>
+						<div>
+							<a href="#" class="link">Invite more</a>
+						</div>
+					</div>
+					<div class="invitation-accept invitation-counter">
+						<h5>
+							INVITATION ACCEPT
+						</h5>
+						<span class="count">
+							399
+							</span>
+						<div class="members">
+							<div class="avatar john mini"></div>
+							<div class="avatar john mini"></div>
+							<div class="avatar john mini"></div>
+							<div class="avatar john mini"></div>
+							<div class="avatar john mini"></div>
+							<div class="avatar mini">
+								<span>+390</span>
+							</div>
+						</div>
+					</div>
+				</div>
 		</div>
 	</aside>
 </main>
-<script src="../../js/show-menu.js"></script>
-<script src="../../js/select.js"></script>
+<script src="../../../js/show-menu.js"></script>
+<script src="../../../js/select.js"></script>
 <script>
     const mainDropdown = (e) => {
         const dropdown = document.querySelector('.welcome-wrapper')
         dropdown.classList.toggle('isActive')
+    }
+
+    const openDropdown = () => {
+        const dropDown = document.querySelector('.mobile-sideMenu-dropdown')
+        dropDown.classList.toggle('isOpen')
     }
 </script>
 </body>
