update sign up/log in and company

--- a/pages/Company/Invitation/index.html
+++ b/pages/Company/Invitation/index.html
@@ -270,7 +270,7 @@
 								<div class="select filter">
 									<div class="select__header">
 										<span class="select__current small-semibold-text">
-											RIGHTS
+											ROLE
 										</span>
 										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<mask id="mask0_635_14371" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="16" height="17">
@@ -321,7 +321,7 @@
 								</div>
 								<div class="table-cell">
 									<span class="cell-header">
-										RIGHTS
+										ROLE
 									</span>
 									<div class="select badge">
 										<div class="select__header">
@@ -363,7 +363,7 @@
 								</div>
 								<div class="table-cell">
 									<span class="cell-header">
-										RIGHTS
+										ROLE
 									</span>
 									<div class="select badge">
 										<div class="select__header">
@@ -405,7 +405,7 @@
 								</div>
 								<div class="table-cell">
 									<span class="cell-header">
-										RIGHTS
+										ROLE
 									</span>
 									<div class="select badge">
 										<div class="select__header">
@@ -447,7 +447,7 @@
 								</div>
 								<div class="table-cell">
 									<span class="cell-header">
-										RIGHTS
+										ROLE
 									</span>
 									<div class="select badge">
 										<div class="select__header">
@@ -528,7 +528,7 @@
 								<div class="select filter">
 									<div class="select__header">
 										<span class="select__current small-semibold-text">
-											RIGHTS
+											ROLE
 										</span>
 										<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<mask id="mask0_635_143711" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="2" y="2" width="16" height="17">
@@ -565,7 +565,7 @@
 								</div>
 								<div class="table-cell cell-for-rights">
 									<span class="cell-header">
-										RIGHTS
+										ROLE
 									</span>
 									<div class="select badge">
 										<div class="select__header">
