--- a/pages/SignUpSignIn/RecoveryPassword/index.html
+++ b/pages/SignUpSignIn/RecoveryPassword/index.html
@@ -18,6 +18,17 @@
 <body>
 <main>
 
+	<svg style="height: 0; width: 0; position: absolute">
+		<defs>
+			<mask id="mask0_3806_6549" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="5" width="22" height="14">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M3.75571 12.277C3.66855 12.1778 3.5888 12.0849 3.51679 11.9995C3.5888 11.9141 3.66855 11.8212 3.75571 11.722C4.22627 11.1862 4.90641 10.4729 5.74361 9.76205C6.19274 9.38072 6.6771 9.00856 7.18976 8.66722C6.8934 9.31678 6.72821 10.0382 6.72821 10.7996C6.72821 13.6871 9.10394 15.9992 11.999 15.9992C14.8941 15.9992 17.2698 13.6871 17.2698 10.7996C17.2698 10.0382 17.1046 9.31672 16.8082 8.66714C17.3209 9.00851 17.8053 9.38069 18.2545 9.76205C19.0917 10.4729 19.7718 11.1862 20.2424 11.722C20.3296 11.8212 20.4093 11.9141 20.4813 11.9995C20.4093 12.0849 20.3296 12.1778 20.2424 12.277C19.7718 12.8128 19.0917 13.5261 18.2545 14.237C16.5502 15.684 14.3384 16.999 11.9991 16.999C9.65972 16.999 7.44794 15.684 5.74361 14.237C4.90641 13.5261 4.22627 12.8128 3.75571 12.277ZM22.5688 11.4102C22.569 11.4104 22.5692 11.4107 21.7609 11.9995C22.5692 12.5883 22.569 12.5886 22.5688 12.5888L22.5683 12.5895L22.567 12.5913L22.5632 12.5964L22.5509 12.6131C22.5406 12.627 22.526 12.6465 22.5073 12.6712C22.4699 12.7205 22.4159 12.7906 22.3462 12.8785C22.207 13.0542 22.0044 13.3016 21.7451 13.5968C21.2277 14.1859 20.4783 14.9725 19.549 15.7615C17.7202 17.3143 15.051 18.999 11.9991 18.999C8.94707 18.999 6.27794 17.3143 4.44916 15.7615C3.51982 14.9725 2.77037 14.1859 2.25298 13.5968C1.99369 13.3016 1.79115 13.0542 1.65187 12.8785C1.5822 12.7906 1.52825 12.7205 1.49085 12.6712C1.47214 12.6465 1.45756 12.627 1.44721 12.6131L1.43487 12.5964L1.4311 12.5913L1.42982 12.5895L1.42933 12.5888C1.42912 12.5886 1.42894 12.5883 2.23721 11.9995C1.42894 11.4107 1.42912 11.4104 1.42933 11.4102L1.42982 11.4095L1.4311 11.4077L1.43487 11.4026L1.44721 11.3859C1.45756 11.372 1.47214 11.3525 1.49085 11.3278C1.52825 11.2785 1.5822 11.2084 1.65187 11.1205C1.79115 10.9448 1.99369 10.6974 2.25298 10.4022C2.77037 9.81308 3.51982 9.0265 4.44916 8.23745C6.27794 6.68475 8.94707 5 11.9991 5C15.051 5 17.7202 6.68475 19.549 8.23745C20.4783 9.0265 21.2277 9.81308 21.7451 10.4022C22.0044 10.6974 22.207 10.9448 22.3462 11.1205C22.4159 11.2084 22.4699 11.2785 22.5073 11.3278C22.526 11.3525 22.5406 11.372 22.5509 11.3859L22.5632 11.4026L22.567 11.4077L22.5683 11.4095L22.5688 11.4102ZM21.7609 11.9995L22.5692 11.4107L22.9981 11.9995L22.5692 12.5883L21.7609 11.9995ZM1.42894 11.4107L2.23721 11.9995L1.42894 12.5883L1 11.9995L1.42894 11.4107ZM8.72821 10.7996C8.72821 9.04825 10.1767 7.59995 11.999 7.59995C13.8213 7.59995 15.2698 9.04825 15.2698 10.7996C15.2698 12.5509 13.8213 13.9992 11.999 13.9992C10.1767 13.9992 8.72821 12.5509 8.72821 10.7996Z"/>
+			</mask>
+			<mask id="mask0_3847_11317" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="1" y="7" width="22" height="10">
+				<path fill-rule="evenodd" clip-rule="evenodd" d="M3.89942 7.54268C3.64674 7.05159 3.04379 6.85833 2.5527 7.11102C2.06161 7.3637 1.86835 7.96665 2.12104 8.45774C2.32176 8.84783 2.55179 9.22277 2.80852 9.58073L1.32582 10.9509C0.920207 11.3258 0.889055 11.9641 1.25624 12.3766C1.62342 12.7891 2.24989 12.8197 2.6555 12.4449L4.13889 11.0741C4.81681 11.6939 5.59021 12.231 6.43673 12.6699L5.68617 14.5624C5.48257 15.0758 5.73151 15.6624 6.24219 15.8727C6.75287 16.083 7.33192 15.8373 7.53552 15.3239L8.28563 13.4325C9.15866 13.7081 10.0818 13.8889 11.0369 13.9623L11.0417 16.0012C11.043 16.5535 11.4918 17.0001 12.044 16.9988C12.5963 16.9975 13.043 16.5486 13.0417 15.9964L13.0369 13.9574C13.9608 13.8818 14.8542 13.7057 15.7008 13.4405L16.4517 15.334C16.6553 15.8474 17.2344 16.0931 17.7451 15.8828C18.2558 15.6725 18.5047 15.0859 18.3011 14.5725L17.5514 12.6822C18.4012 12.2442 19.1778 11.7073 19.8586 11.0873L21.3435 12.4595C21.7491 12.8343 22.3756 12.8038 22.7428 12.3912C23.11 11.9787 23.0788 11.3404 22.6732 10.9655L21.192 9.59671C21.4533 9.23393 21.6872 8.85364 21.8909 8.45774C22.1436 7.96665 21.9504 7.3637 21.4593 7.11102C20.9682 6.85833 20.3652 7.05159 20.1126 7.54268C18.7923 10.1086 15.7068 11.9994 12.006 11.9994C8.30513 11.9994 5.21968 10.1086 3.89942 7.54268Z" fill="black"/>
+			</mask>
+		</defs>
+	</svg>
+
 	<!--		Navigation panel-->
 
 	<div class="navigation hide">
@@ -57,9 +68,9 @@
 				</div>
 				<button class="btn primary-btn" type="submit" onclick="nextStep()">Continue</button>
 				<div class="bottom-recovery">
-					<h3 class="bottom-title">
+					<h4 class="bottom-title">
 						Remembered the password?
-					</h3>
+					</h4>
 					<a href="#" class="bottom-link link">
 						Back to sign in
 					</a>
@@ -80,9 +91,9 @@
 					alexthompson@gmail.com
 				</button>
 				<div class="container-resend-folder">
-					<h3 class="bottom-title">
+					<h4 class="bottom-title">
 						No email in your inbox or spam folder?
-					</h3>
+					</h4>
 					<a href="#" class="bottom-link link">
 						Resend the instruction again
 					</a>
@@ -104,14 +115,22 @@
 
 				<div class="text-field text-field_floating">
 					<input class="text-field__input" type="password" id="passwordNew" placeholder=" " required>
-					<label class="text-field__label" for="passwordNew">New Password*</label>
+					<label class="text-field__label" for="passwordNew">New password*</label>
 					<label class="text-field__label-error" for="passwordNew">Password Must Match*</label>
 					<div class="icon-password" onclick="switchPasswordType()">
 						<span class="icon-eye-close">
-							<img src="../../../images/eye-close.svg" alt="eye close">
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_3847_11317)">
+								<rect width="24" height="24" fill="#140E17"/>
+								</g>
+							</svg>
 						</span>
 						<span class="icon-eye-open">
-							<img src="../../../images/eye-open.svg" alt="eye open">
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_3806_6549)">
+								<rect width="24" height="24"/>
+								</g>
+							</svg>
 						</span>
 					</div>
 					<p class="password-description">
@@ -120,14 +139,22 @@
 				</div>
 				<div class="text-field text-field_floating">
 					<input class="text-field__input" type="password" id="passwordConfirm" placeholder=" " required>
-					<label class="text-field__label" for="passwordConfirm">Confirm New Password*</label>
+					<label class="text-field__label" for="passwordConfirm">Confirm new password*</label>
 					<label class="text-field__label-error" for="passwordConfirm">Password Must Match*</label>
 					<div class="icon-password" onclick="switchPasswordType()">
 						<span class="icon-eye-close">
-							<img src="../../../images/eye-close.svg" alt="eye close">
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_3847_11317)">
+								<rect width="24" height="24" fill="#140E17"/>
+								</g>
+							</svg>
 						</span>
 						<span class="icon-eye-open">
-							<img src="../../../images/eye-open.svg" alt="eye open">
+							<svg width="24" height="24" viewBox="0 0 24 24" fill="#140E17" xmlns="http://www.w3.org/2000/svg">
+								<g mask="url(#mask0_3806_6549)">
+								<rect width="24" height="24"/>
+								</g>
+							</svg>
 						</span>
 					</div>
 				</div>
